k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${_PROJECT_NAME}
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    # certmanager.k8s.io/acme-http01-edit-in-place: "true"
    # kubernetes.io/ingress.class: "nginx"
    # kubernetes.io/ingress.allow-http: "true"
    # kubernetes.io/tls-acme: "true"
    # ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/rewrite-target: /
  # labels:
  #   last_updated: 1
spec:
  rules:
  - host: shareit.works
    http:
      paths:
      - path: /
        backend:
          serviceName: ${_PROJECT_NAME}
          servicePort: 80
  tls:
  - secretName: share-it-secret
    hosts:
    - shareit.works
